tests/baselines/reference/for-of44.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of44.ts(2,31): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of44.ts (1 errors) ====
    var array: [number, string | boolean | symbol][] = [[0, ""], [0, true], [1, Symbol()]]
    for (var [num, strBoolSym] of array) {
                                  ~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        num;
        strBoolSym;
    }